Приложение psalter: исправлен функционал раскрытия "параллельных мест"

--- a/psalter/index.html
+++ b/psalter/index.html
@@ -273,7 +273,7 @@ function formSectionTextContent(data_sec, num, txt_sec) {
 	let verses = txt_sec!=='ln' ?
 		data[data_sec][num][txt_sec][hasHeader ? 1 : 0] :
 		data[data_sec][num][txt_sec][hasHeader ? 1 : 0].map(x=>x==='' ? '' : x.slice(0,-1).split('; ').
-			map(y=>{z = y.split('. '); n = z[1].split(':'); if (z[0]==='Пс' && data.psalms[n[0]]) console.log(n, data.psalms[n[0]]['ru'][hasHeader ? 1 : 0][n[1]-1]);
+			map(y=>{let z = y.split('. '); let n = z[1].split(':');
 				return (data.books[z[0]] ? `<abbr title="${data.books[z[0]]}">${z[0]}.</abbr>` : z[0] + '.') + ' ' +
 				(z[0]==='Пс' && data.psalms[n[0]] ? `<abbr title="${data.psalms[n[0]]['ru'][hasHeader ? 1 : 0][n[1]-1]}">${z[1]}</abbr>`: z[1]);}).
 			join('; ') + '.');
@@ -325,7 +325,7 @@ const data = {
 
 	},
 	books: {
-		'Втор':'Второзаконие', 'Нав':'Книга Иисуса Навина', '2Цар.':'Вторая книга Царств', 'Иов':'Книга Иова', 'Пс':'Псалтирь', 'Притч':'Книга Притчей Соломоновых', 'Ис':'Книга пророка Исайи', 'Иер':'Книга пророка Иеремии', 'Ос':'Книга пророка Осии', 'Наум':'Книга пророка Наума', 'Прем':'Книга Премудрости Соломона',
+		'Втор':'Второзаконие', 'Нав':'Книга Иисуса Навина', '2Цар':'Вторая книга Царств', 'Иов':'Книга Иова', 'Пс':'Псалтирь', 'Притч':'Книга Притчей Соломоновых', 'Ис':'Книга пророка Исайи', 'Иер':'Книга пророка Иеремии', 'Ос':'Книга пророка Осии', 'Наум':'Книга пророка Наума', 'Прем':'Книга Премудрости Соломона',
 		'Мф':'Евангелие от Матфея', 'Лк':'Евангелие от Луки', 'Ин':'Евангелие от Иоанна', 'Деян':'Деяния святых Апостолов', '1Пет':'Первое послание Петра', 'Рим':'Послание к Римлянам', 'Гал':'Послание к Галатам', 'Еф':'Послание к Ефесянам', '1Тим':'Первое послание к Тимофею', '2Тим':'Второе послание к Тимофею', 'Евр':'Послание к Евреям', 'Откр':'Откровение Иоанна Богослова'
 	}
 };
